Fixed places map description not remaining below map on mobile view #436

--- a/styles/_region-charts.sass
+++ b/styles/_region-charts.sass
@@ -29,7 +29,7 @@
         .dataset-description
             background: $gray-background-color
             color: $darker-gray-text-color
-            margin: 0 30px 30px
+            margin: 0 0 30px
             padding: 10px 30px
 
             @media (max-width: $mobile-width)
